# local_db_remote

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  manifest.yaml  package-lock.json  package.json  settings.yaml  test-manifest.yaml  tsconfig.json  vitest.config.mts
.github/workflows/: bump-schema-version.yml  bump-seed-generation.yml  remote-sync.yml
data/: manifest.yaml
rust/: Cargo.toml
rust/src/: cli.rs  constants.rs  main.rs  sync.rs
src/: archive.rs  archive.ts  cli.rs  cli.ts  constants.rs  constants.ts  database.rs  database.ts  http.rs  http.ts  index.ts  lib.rs  logging.rs  logging.ts  main.rs  manifest.rs  options.ts  settings.ts  sync.rs  sync.ts
src/__tests__/: archive.spec.ts  cli.spec.ts  database.spec.ts  http.spec.ts  index.spec.ts  logging.spec.ts  options.spec.ts  settings.spec.ts  sync.integration.spec.ts
src/sync/: mod.rs  orchestrator.rs  runtime.rs  tests.rs
src/workflows/: bump-schema-version.rs  bump-seed-generation.rs
